force-app/main/default/objects/CreditLimit__c/CreditLimit__c.object-meta.xml
<CustomObject>
    <label>Credit Limit</label>
    <nameField>
        <displayFormat>CL-{00000}</displayFormat>
        <label>Credit Limit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Limits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>