force-app/main/default/objects/CreditLimit__c/fields/CommercialAccount__c.field-meta.xml
<CustomField>
    <fullName>CommercialAccount__c</fullName>
    <label>Commercial Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CommercialAccount</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Limits</relationshipLabel>
    <relationshipName>Credit_Limits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>