force-app/main/default/objects/CreditLimit__c/fields/CommercialERPNumber__c.field-meta.xml
<CustomField>
    <fullName>CommercialERPNumber__c</fullName>
    <formula>CommercialAccount__r.ERP_Number__c</formula>
    <label>Commercial ERP Number</label>
    <type>Text</type>
</CustomField>