force-app/main/default/objects/CreditLimit__c/fields/CurrentLimit__c.field-meta.xml
<CustomField>
    <fullName>CurrentLimit__c</fullName>
    <formula>IF(OR(ISBLANK(Limit__c),ISBLANK(LimitUsed__c)),0,(Limit__c - LimitUsed__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>