force-app/main/default/objects/CreditLimit__c/fields/LimitIndicator__c.field-meta.xml
<CustomField>
    <fullName>LimitIndicator__c</fullName>
    <formula>IF( IsActive__c = false,
IMAGE(&quot;/sfc/servlet.shepherd/version/download/&quot;&amp;$Label.AVX_IconInactive_NT,&quot;Inactive&quot;),
IF(
CurrentLimit__c&lt;=0,
IMAGE(&quot;/sfc/servlet.shepherd/version/download/&quot;&amp;$Label.AVX_IconAttention_NT,&quot;Attention&quot;),
IMAGE(&quot;/sfc/servlet.shepherd/version/download/&quot;&amp; $Label.AVX_IconSuccess_NT,&quot;Success&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Limit Indicator</label>
    <type>Text</type>
</CustomField>