force-app/main/default/objects/CreditLimit__c/fields/LimitUsed__c.field-meta.xml
<CustomField>
    <fullName>LimitUsed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Limit Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>